--- a/web.html
+++ b/web.html
@@ -18,7 +18,7 @@
       }
 
       .custom-jumbotron {
-        background-color: #007bff; /* Warna latar belakang jumbotron */
+        background-color: #205b9a; /* Warna latar belakang jumbotron */
         color: white; /* Teks berwarna putih */
         border-radius: 0; /* Menghilangkan border radius agar tidak melengkung */
         padding: 50px; /* Memberikan padding */
@@ -35,7 +35,7 @@
     </style>
   </head>
   <body>
-    <div class="mt-4 p-5 bg-primary text-white rounded custom-jumbotron">
+    <div class="p-5 bg-primary text-white rounded custom-jumbotron">
       <h1>Game Tebak angka</h1>
       <p>
         Saya membuat game sederhana yang di bantu oleh chatgpt. saya membuat
@@ -91,7 +91,7 @@
       </div>
     </nav>
     <section id="About" class="py-5">
-        <div class="container text-center">
+        <div class="container text-center p-5 text-dark" style="background-color: #F0FFFF;">
           <h2 class="mb-4">About Game Tebak Angka</h2>
           <p>
             Game Tebak Angka adalah permainan yang menantang kamu untuk menebak angka rahasia yang dipilih secara acak antara 1 hingga 100. Tujuan permainan ini adalah untuk menebak angka yang tepat secepat mungkin. Setiap kali kamu melakukan tebakan, game akan memberikan petunjuk apakah tebakanmu terlalu besar atau terlalu kecil. 
@@ -99,7 +99,7 @@
           </p>
         </section>
         <section id="how to play" class="py-5">
-            <div class="container text-center">
+            <div class="container text-center p-5 text-dark" style="background-color: #F0FFFF;">
               <h2 class="mb-4">how to play Tebak Angka</h2>
               <ol class="text-start">
                 <li><strong>Mulai Permainan:</strong>
@@ -159,7 +159,7 @@
                 </div>
               </div>
               <section id="kredit" class="py-5">
-                <div class="container text-center">
+                <div class="mt-4 p-5 bg-primary text-white rounded custom-jumbotron">
                     <h2 class="mb-4">Kredit</h2>
                     <p>
                         Game ini dibuat dengan bantuan OpenAI ChatGPT. Kami ingin mengucapkan terima kasih kepada semua yang telah memberikan inspirasi dalam pembuatan game sederhana ini.
